--- a/RWD/intro/assets/css/style.css
+++ b/RWD/intro/assets/css/style.css
@@ -36,7 +36,7 @@ h1 {
   border: 1px solid rgba(0, 0, 0, 0.5);
   border-radius: 10px;
 }
-
+/* rem */
 @media all and (max-width: 1200px) {
   h1 {
     color: skyblue;
