--- a/SASS/intro/assets/sass/components/_buttons.scss
+++ b/SASS/intro/assets/sass/components/_buttons.scss
@@ -1,18 +1,76 @@
-.btn{
+// .btn{
+//     padding: 10px;
+//     cursor: pointer;
+//     border: 1px solid orange;
+//     border-radius: 5px;
+// }
+
+// .btn-primary{
+//     background-color: orange;
+//     color: #fff;
+//     transition: all .5s ease-in-out;
+// }
+// .btn-primary:hover,
+// .btn-primary:focus,
+// .btn-primary:active{
+//     background-color: #fff;
+//     color: orange;
+// }
+%btn-placeholder{
     padding: 10px;
     cursor: pointer;
-    border: 1px solid orange;
-    border-radius: 5px;
+    text-align: center;
+    border-radius: 10px;
+    width: $btn-width;
+    display: inline-block;
+    transition: all .5s ease-in-out;
+    // color: $text-light;
+    // text-decoration: none;
+    // text-transform: uppercase;
+    @include link-text($text-light);
+}
+.buttons {
+    display: inline-block;
+    // .btn-primary:link,
+    // .btn-secondary:link {
+    //     // padding: 10px;
+    //     // cursor: pointer;
+    //     // text-align: center;
+    //     // border-radius: 10px;
+    //     // width: $btn-width;
+    //     // display: inline-block;
+    //     // transition: all .5s ease-in-out;
+    //     // // color: $text-light;
+    //     // // text-decoration: none;
+    //     // // text-transform: uppercase;
+    //     // @include link-text($text-light);
+    // }
 }
 
-.btn-primary{
-    background-color: orange;
-    color: #fff;
-    transition: all .5s ease-in-out;
+.btn-primary {
+    &:link {
+        @extend %btn-placeholder;
+        background-color: $color-secondary;
+    }
+    &:hover,
+    &:focus,
+    &:active {
+        background:darken($color-secondary, 10%) ;
+        // opacity: .5;
+    }
 }
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active{
-    background-color: #fff;
-    color: orange;
+
+.btn-secondary{
+    &:link{
+        @extend %btn-placeholder;
+        background-color: $color-tertiary;
+    }
+    &:hover, &:focus, &:active{
+        background-color:  lighten($color-tertiary, 10%);
+    }
 }
+
+// -webkit- 
+// -moz- 
+// -o- 
+
