--- a/Angular/basic/src/app/app.component.html
+++ b/Angular/basic/src/app/app.component.html
@@ -3,9 +3,10 @@
   <div class="row">
     <div class="col-sm-12">
       <!-- <app-admin></app-admin> -->
-      <app-products></app-products>
+      <!-- <app-products></app-products> -->
       <!-- <div app-products></div> -->
       <!-- <div class="app-products"></div> -->
+      <app-tab></app-tab>
       
     </div>
   </div>
